modified bulk_extractor README and SlackBuild to account for optional deps

--- a/bulk_extractor/README
+++ b/bulk_extractor/README
@@ -8,5 +8,5 @@ common tend to be more important.
 bulk_extractor is distinguished from other forensic tools by its speed and 
 thoroughness. 
 
-TODO: add lightgrep by default
+Optional dependancies include libewf (recognized if installed), afflib (recognized if installed), and liblightgrep.  To use liblightgrep, you will need to uncomment out the line in the SlackBuild that enables it. 
 
