--- a/bulk_extractor/README
+++ b/bulk_extractor/README
@@ -8,5 +8,13 @@ common tend to be more important.
 bulk_extractor is distinguished from other forensic tools by its speed and 
 thoroughness. 
 
-Optional dependancies include libewf (recognized if installed), afflib (recognized if installed), and liblightgrep.  To use liblightgrep, you will need to uncomment out the line in the SlackBuild that enables it. 
+Optional dependancies include libewf (recognized if installed), afflib 
+(recognized if installed), and liblightgrep.  
 
+To add optional liblightgrep support:
+
+  LIGHTGREP_ENABLE=yes ./bulk_extractor.SlackBuild
+
+NOTE:
+  When running bulk_extractor with lightgrep, use 
+  "-x find -e lightgrep -F findlist.txt"  
