--- a/binplist/README
+++ b/binplist/README
@@ -1,5 +1,4 @@
-Binplist:
+binplist (python module)
 
-A binary plist parser.
+A binary property list (plist) parser module written in python.
 
-https://code.google.com/p/binplist/
