--- a/construct/README
+++ b/construct/README
@@ -1,9 +1,6 @@
-Construct is a powerful declarative parser (and builder) for binary data.
+Construct (python library) 
 
-Instead of writing imperative code to parse a piece of data, you declaratively 
-define a data structure that describes your data. As this data structure is not 
-code, you can use it in one direction to parse data into Pythonic objects, and 
-in the other direction, convert ("build") objects into binary data.
+Construct is a powerful declarative parser (and builder) for binary data.
 
 The library provides both simple, atomic constructs (such as integers of 
 various sizes), as well as composite ones which allow you form hierarchical 
