--- a/libevt/README
+++ b/libevt/README
@@ -1,4 +1,4 @@
-libevt
+libevt (libYAL EVT library)
 
 Library and tooling to access the Windows Event Log (EVT) format. 
 For the Windows XML Event Log (EVTX) format see: libevtx
