--- a/libmsiecf/README
+++ b/libmsiecf/README
@@ -1,6 +1,4 @@
-libmsiecf
+libmsiecf (libYAL MSIE Cache library)
 
 Library and tools to access the Microsoft Internet Explorer (MSIE) Cache File 
 (index.dat) files. 
-
-Homepage: http://code.google.com/p/libmsiecf/
