--- a/libpff/README
+++ b/libpff/README
@@ -1,4 +1,4 @@
-libpff
+libpff (libYAL PFF library)
 
 Library and tools to access the Personal Folder File (PFF) and the Offline 
 Folder File (OFF) format.
@@ -13,8 +13,7 @@ Supported formats:
 
 -32-bit ANSI (string)
 -64-bit Unicode (string)
--64-bit with 4k pages with DEFLATE compression (Compressed OST files) (as of 
- version 20130722)
+-64-bit with 4k pages with DEFLATE compression (Compressed OST files) 
 
 Additional features:
 
