--- a/libqcow/README
+++ b/libqcow/README
@@ -1,10 +1,11 @@
-libqcow
+libqcow (libYAL QEMU QCOW image library)
 
 Library and tooling to access the QEMU Copy-On-Write (QCOW) image format.
 
 Read supported QCOW formats:
     version 1
     version 2 
+    version 3 (as of version 20141201)                                    
 Supported QCOW format features:
     compression
     encryption 
@@ -14,3 +15,6 @@ QCOW format features not supported at the moment:
 Work in progress:
     Python bindings
     Dokan library support 
+    Thread-safety in file API functions
+Planned:
+    Python 3 support
