--- a/libregf/README
+++ b/libregf/README
@@ -1,5 +1,3 @@
-libregf
+libregf (libYAL WinNT Registry File library)
 
 Library and tools to access the Windows NT Registry File (REGF) format. 
-
-Homepage: http://code.google.com/p/libregf/
