--- a/libsmdev/README
+++ b/libsmdev/README
@@ -1,5 +1,3 @@
-libsmdev
+libsmdev (libYAL storage media library)
 
 Library to access to storage media devices.
-
-Homepage: https://code.google.com/p/libsmdev/
