updated libvmdk SlackBuild

--- a/libvmdk/README
+++ b/libvmdk/README
@@ -1,4 +1,4 @@
-libvmdk
+libvmdk (libYAL VMDK library)
 
 Library and tools to access the VMware Virtual Disk (VMDK) image format.
 
@@ -17,5 +17,5 @@ Supported VMDK format features:
 VMDK format features not supported at the moment:
 
     -images that use a physical device
-    -changed block tracking (CBT) (supported by VMDK version 3 (sparse)) / 
-    -change tracking file 
+    -changed block tracking (CBT) (supported by VMDK version 3 (sparse))  
+      change tracking file 
