--- a/libvshadow/README
+++ b/libvshadow/README
@@ -1,7 +1,5 @@
-libvshadow
+libvshadow (libYAL Volume Shadow library)
 
 Library and tools to access the Volume Shadow Snapshot (VSS) format. The VSS 
 format is used by Windows, as of Vista, to maintain copies of data on a storage
 media volume.
-
-Homepage:  http://code.google.com/p/libvshadow/ 
