--- a/dfvfs/README
+++ b/dfvfs/README
@@ -8,41 +8,41 @@ types, volume systems and file systems.
 
 Supported:
 
-    EWF (EWF-E01, EWF-Ex01, EWF-S01) (Requires: libewf/pyewf)
-    QCOW version 1, 2 (Requires: libqcow/pyqcow)
-    Storage Media device (Requires: libsmdev/pysmdev)
-    (split) Storage Media RAW (Requires: libsmraw/pysmraw)
-    VHD (Requires: libvhdi/pyvhdi)
-    VMDK (Requires: libvmdk/pyvmdk) 
+    EWF (EWF-E01, EWF-Ex01, EWF-S01) 
+    QCOW version 1, 2 
+    Storage Media device 
+    (split) Storage Media RAW 
+    VHD 
+    VMDK 
 
 Note that at the moment differential images are not supported.
 Volume systems
 
 Supported:
 
-    APM (Requires: libtsk/pytsk3)
-    BitLocker (BDE) (Requires: libbde/pybde)
-    GPT (Requires: libtsk/pytsk3)
-    MBR (Requires: libtsk/pytsk3)
-    VSS (Requires: libvshadow/pyvshadow) 
+    APM 
+    BitLocker (BDE) 
+    GPT 
+    MBR 
+    VSS 
 
 Planned:
 
-    FileVault2 (CoreStorage) (Requires: libfvde/pyfvde)
+    FileVault2 (CoreStorage) 
     LDM
-    LUKS (Requires: libluksde/pyluksde)
-    Linux LVM version 1, 2 (Requires: libvslvm/pyvslvm)
+    LUKS 
+    Linux LVM version 1, 2 
     Software Raid 
 
 File systems
 
 Supported file systems:
 
-    ext version 2, 3, 4 (Requires: libtsk/pytsk3)
-    FAT (Requires: libtsk/pytsk3)
-    HFS, HFS+, HFSX (Requires: libtsk/pytsk3)
-    NTFS version 3 (Requires: libtsk/pytsk3)
-    UFS version 1, 2 (Requires: libtsk/pytsk3) 
+    ext version 2, 3, 4 
+    FAT 
+    HFS, HFS+, HFSX 
+    NTFS version 3 
+    UFS version 1, 2 
 
 TODO add more detail here regarding FAT and other supported FS
 Compressed stream file types
