--- a/XlsxWriter/README
+++ b/XlsxWriter/README
@@ -1,4 +1,4 @@
-xlsxwriter - A Python module for creating Excel XLSX files
+XlsxWriter - A Python module for creating Excel XLSX files
 
 XlsxWriter can be used to write text, numbers, formulas and hyperlinks to 
 multiple worksheets and it supports features such as formatting and many more,
