--- a/distorm/README
+++ b/distorm/README
@@ -1,3 +1,5 @@
+distorm (Disassembler Library for x86/AMD64 binary streams)
+
 diStorm is really a decomposer, which means it takes an 
 instruction and returns a binary structure which describes 
 it rather than static text, which is great for advanced 
