--- a/artifacts/README
+++ b/artifacts/README
@@ -5,3 +5,5 @@ artifacts that the world can use both as an information source and within
 other tools.
 
 For more information see: https://github.com/ForensicArtifacts/artifacts
+
+PyYAML is a run time dependancy.
