--- a/pefile/README
+++ b/pefile/README
@@ -14,3 +14,5 @@ Some of the tasks that pefile makes possible are:
     Warnings for suspicious and malformed values
     Packer detection with PEiD's signatures
     PEiD signature generation 
+
+python-future is a run time dependency.
