--- a/bulk_extractor/README
+++ b/bulk_extractor/README
@@ -18,3 +18,6 @@ To add optional liblightgrep support:
 NOTE:
   When running bulk_extractor with lightgrep, use
   "-x find -e lightgrep -F findlist.txt" in addition to regular options.
+
+If you want to use the java based GUI (BEViewer), you will also need to have
+java installed.  
