--- a/libregf/README
+++ b/libregf/README
@@ -1,3 +1,5 @@
 libregf (libYAL WinNT Registry File library)
 
 Library and tools to access the Windows NT Registry File (REGF) format. 
+
+- This software is in alpha status. 
