--- a/dfvfs/README
+++ b/dfvfs/README
@@ -4,3 +4,5 @@ The goal of dfVFS is to provide a generic interface for accessing file-system
 objects, for which it uses several back-ends that provide the actual
 implementation of the various storage media types, volume systems and file
 systems.
+
+backports.lzma is an optional dependency.  
