--- a/libbde/README
+++ b/libbde/README
@@ -1,22 +1,31 @@
 libbde (libYAL BitLocker library)
 
-Library and tools to access the BitLocker Drive Encryption (BDE) format.
-The BDE format is used by Windows, as of Vista, to encrypt data on a storage
-media volume.
+Library to access the BitLocker Drive Encryption (BDE) format.
+BitLocker Drive Encryption (BDE) is a volume-based encryption method used by
+Microsoft Windows, as of Vista, to encrypt data on a storage media volume.
+
+Project information:
+* Status: alpha
+* Licence: LGPLv3+
 
 Supported BDE formats:
-    -BitLocker Windows Vista
-    -BitLocker Windows 7
-    -BitLocker Windows 8 (Consumer Preview)
-    -BitLocker To Go
+* BitLocker Windows Vista
+* BitLocker Windows 7
+* BitLocker Windows 8
+* BitLocker Windows 10
+* BitLocker To Go
+
+Supported encryption methods:
+* AES-CBC
+* AES-XTS
 
 Supported protection methods:
-    -clear key
-    -password
-    -recovery password
-    -start-up key
-    -FKEV and/or TWEAK key data
+* clear key
+* password
+* recovery password
+* start-up key
+* FKEV and/or TWEAK key data
 
 Additional features:
-    -support for partial encrypted volumes
-    -zeros out the BDE metadata, matches behavior seen on Windows
+* support for partial encrypted volumes
+* zeros out the BDE metadata, matches behavior seen on Windows
