--- a/dpkt/README
+++ b/dpkt/README
@@ -3,3 +3,8 @@ dpkt (python TCP/IP packet library)
 fast, simple packet creation / parsing, with definitions for the
 basic TCP/IP protocols.
 
+This will build the Python 3 modules.  If you want to also build modules for
+Python 2, use:
+
+  # PYTHON2=yes ./dpkt.SlackBuild
+
