updated/renamed python2-distorm

--- a/python2-distorm/README
+++ b/python2-distorm/README
@@ -1,4 +1,4 @@
-distorm (Disassembler Library for x86/AMD64 binary streams)
+python2-distorm (Disassembler Library for x86/AMD64 binary streams)
 
 diStorm is really a decomposer, which means it takes an 
 instruction and returns a binary structure which describes 
