--- a/libcreg/README
+++ b/libcreg/README
@@ -1,4 +1,7 @@
-libcreg (libYAL Windows 9x/Me Registry File CREG format)
+libcreg (libYAL CREG library)
+
+Library to access the Windows 9x/Me Registry File CREG format
+system format.
 
 Project information:
 
