updated libfshfs to 20220427

--- a/libfshfs/README
+++ b/libfshfs/README
@@ -1,4 +1,5 @@
-libfshfs is a library to access the Mac OS Hierarchical File System (HFS).
+libfshfs is a library to access the Mac OS Hierarchical File System 
+(HFS).
 
 Project information:
 
