--- a/libvsgpt/README
+++ b/libvsgpt/README
@@ -1,4 +1,5 @@
-libvsgpt is a library to access the GUID Partition Table (GPT) volume system.
+libvsgpt is a library to access the GUID Partition Table (GPT) 
+volume system.
 
 Project information:
 
