--- a/libpff/README
+++ b/libpff/README
@@ -1,7 +1,7 @@
 libpff (libYAL PFF library)
 
-Library and tools to access the Personal Folder File (PFF) and the Offline 
-Folder File (OFF) format.
+Library and tools to access the Personal Folder File (PFF) and the
+Offline Folder File (OFF) format.
 
 PFF/OFF is used in several file types:
 
@@ -13,7 +13,7 @@ Supported formats:
 
 -32-bit ANSI (string)
 -64-bit Unicode (string)
--64-bit with 4k pages with DEFLATE compression (Compressed OST files) 
+-64-bit with 4k pages with DEFLATE compression (Compressed OST files)
 
 Additional features:
 
